Fix z-index

--- a/src/css/hobbies.css
+++ b/src/css/hobbies.css
@@ -10,7 +10,6 @@
 #hobbies-list {
   overflow-x: scroll;
   scrollbar-width: none; /* Firefox */
-  light-space: nowrap;
   width: 100%;
   height: 100vh;
   display: flex;
